[package]
name = "pump_pair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
askama = "0.12.1"
async-trait = "0.1.80"
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
derive_builder = "0.20.0"
regex = "1.10.4"
reqwest = { version = "0.12.3", features = ["json"] }
serde = "1.0.198"
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
tap = "1.0.1"
thiserror = "1.0.58"
time = { version = "0.3.36", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = [
    "add-extension",
    "trace",
    "timeout",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "local-time",
] }
validator = { version = "0.18.1", features = ["derive"] }

[build-dependencies]
anyhow = "1.0.82"
vergen = { version = "8.3.1", features = ["build", "git", "gitcl", "rustc"] }
